--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -38,7 +38,7 @@
         integrity="sha256-VAvG3sHdS5LqTT+5A/aeq/bZGa/Uj04xKxY8KM/w9EE="
         crossorigin="anonymous"></script>
 <script
-        src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"
+        src="https://code.jquery.com/ui/1.11.0/jquery-ui.min.js"
         integrity="sha256-lCF+55kMUF+3fO/3BiXui4eiUKcQmtr7ecKSeLVDxIQ="
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
